--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -101,7 +101,10 @@ header nav a {
 
 .banner {
 	display: flex;
+	border-bottom: 1px solid black;
 }
+
+
 
 .banner .banner-text {
 	margin: 0 auto;
@@ -142,6 +145,7 @@ header nav a {
 }
 .content {
 	display: flex;
+	border-bottom: 1px solid black;
 }
 
 .pic-content .middle-img {
@@ -157,6 +161,7 @@ header nav a {
 .contact {
 	padding: 25px 10px;
 	
+	
 }
 
 footer {
@@ -168,5 +173,65 @@ footer {
 .address {
 	margin-top: 16px;
 	display:flex;
+
+}
+
+/* Code for Services Page */
+
+.service-image {
+	display: flex;
+	flex-direction: column;
+	padding-top: 40px;
+}
+
+.service {
+	display: flex;
+	padding: 40px 0;
+	border-bottom: 1px solid black;
+}
+
+.service .service-content h1 {
+	font-size: 20px;
+	/* display: inline-block; */
+}
+
+.main-services {
+	vertical-align: top;
+	display:flex;
+	border-bottom: 1px solid black;
+}
+
+.main .main-content {
+	padding: 25px 10px;
+}
+.main .main-content {
+	width: 49.5%;	
+	/* display: inline-block; */
+}
+
+ service-banner .banner-text {
+	display: flex;
+	margin: 0 auto;
+	text-align: center;
+	vertical-align: top;
+	/* display: inline-block; */
+	width: 49.5%;
+	/* height: 100px;
+	margin: 20px 0; */
 	
 }
+/*
+.service-banner .banner-text#b-text {
+	padding-top: 40px;
+}
+
+.service-banner .banner-text h1 {
+	font-size: 80px;
+	/* display: inline-block; */
+
+
+.service-banner .banner-text button {
+	width: 170px;
+	padding: 7px 0;
+	font-size: 1.1em;
+} */
