--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -178,6 +178,8 @@ footer {
 
 /* Code for Services Page */
 
+
+/* Code for Top Image */
 .service-image {
 	display: flex;
 	flex-direction: column;
@@ -186,52 +188,59 @@ footer {
 
 .service {
 	display: flex;
-	padding: 40px 0;
+	padding: 20px 0px;
 	border-bottom: 1px solid black;
 }
 
+/* Code for Services Top Text */
 .service .service-content h1 {
 	font-size: 20px;
 	/* display: inline-block; */
 }
 
-.main-services {
-	vertical-align: top;
-	display:flex;
-	border-bottom: 1px solid black;
-}
-
-.main .main-content {
-	padding: 25px 10px;
-}
-.main .main-content {
-	width: 49.5%;	
-	/* display: inline-block; */
-}
-
- service-banner .banner-text {
-	display: flex;
-	margin: 0 auto;
-	text-align: center;
-	vertical-align: top;
-	/* display: inline-block; */
-	width: 49.5%;
-	/* height: 100px;
-	margin: 20px 0; */
+/* Code for Main Service Offering */
+.service-main{
+	width:100%
 	
 }
-/*
-.service-banner .banner-text#b-text {
-	padding-top: 40px;
+.service-block{
+	display:flex;
+	flex-wrap:wrap;
+	justify-content: space-between;
+
+	
 }
 
-.service-banner .banner-text h1 {
-	font-size: 80px;
+.service-text{
+	display:flex;
+	border: 1px solid black;
+	flex-direction:column;
+	background: lightgrey;
+	padding: 20px;
+	width: 47%;
+	margin: 20px 0px;
+}
+
+.service-text button {
+	width: 120px;
+	padding: 7px 12px;
+	
+	margin:9px 5px 7px 7px;
+	border-radius: 5px
+}
+
+
+/* Code for the Facts Section */
+
+.facts {
+	display: flex;
+	padding: 20px 0px;
+	border-top: 1px solid black;
+	/* border-top: 1px solid black; */
+}
+
+/* Code for Services Top Text */
+.facts-content h1 {
+	font-size: 20px;
 	/* display: inline-block; */
-
-
-.service-banner .banner-text button {
-	width: 170px;
-	padding: 7px 0;
-	font-size: 1.1em;
-} */
+}
