--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -178,17 +178,18 @@ footer {
 
 /* Code for Services Page */
 
-
 /* Code for Top Image */
 .service-image {
 	display: flex;
-	flex-direction: column;
+	/* flex-direction: column; */
 	padding-top: 40px;
+	width:100%
+	max-width: 100%;
 }
 
 .service {
 	display: flex;
-	padding: 20px 0px;
+	padding: 20px 0px 20px 0px;
 	border-bottom: 1px solid black;
 }
 
@@ -200,7 +201,7 @@ footer {
 
 /* Code for Main Service Offering */
 .service-main{
-	width:100%
+	/* width:100% */
 	
 }
 .service-block{
@@ -224,9 +225,12 @@ footer {
 .service-text button {
 	width: 120px;
 	padding: 7px 12px;
+	margin:9px 5px 7px 0px;
+	border-radius: 5px;
+	background-color:white;
+
+
 	
-	margin:9px 5px 7px 7px;
-	border-radius: 5px
 }
 
 
@@ -234,13 +238,47 @@ footer {
 
 .facts {
 	display: flex;
+
 	padding: 20px 0px;
-	border-top: 1px solid black;
+	border-top: 2px solid black;
+	justify-content:space-between;
+s
 	/* border-top: 1px solid black; */
 }
 
-/* Code for Services Top Text */
 .facts-content h1 {
 	font-size: 20px;
 	/* display: inline-block; */
+}
+
+
+
+.facts .facts-text {
+	display:flex;
+	flex-direction:column;
+	/* margin: 0 auto;
+	text-align: center; */
+	vertical-align: top;
+	/* display: inline-block; */
+	width: 43%;
+	/* height: 400px; */
+	
+}
+
+.facts .facts-text#f-text {
+	padding-top: 0px 40px;
+}
+
+.facts .facts-text h1 {
+	 font-size: 20px; 
+	/* display: inline-block; */
+}
+
+ul.facts-list {
+	list-style-type: square;
+	margin:20px; 
+
+}
+.facts-list li{
+	padding:6px 8px 8px 0px;
 }
